Fix css for import pages to allow horizontal scrolling (for wide spreadsheets).
Add quotes to constants in two files, to silence PHP warnings.

--- a/website/css/import-csv.css
+++ b/website/css/import-csv.css
@@ -229,3 +229,5 @@ div.import_csv {
 th .ui-flipswitch {
     font-size: 16px;
 }
+
+.ui-mobile .ui-page-active { overflow-x: auto; }
